[gd_scene load_steps=7 format=2]

[ext_resource path="res://actors/enemies/ground_bug.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/enemies/boss_bug/boss_bug.gd" type="Script" id=2]
[ext_resource path="res://actors/enemies/bugs.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 10 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 176, 96 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 48.0

[node name="ground_bug" instance=ExtResource( 1 )]

script = ExtResource( 2 )
walk_speed = 800
health = 15
bugs_spawn = 5
score = 250

[node name="shape" parent="." index="0"]

position = Vector2( 0, 88 )
shape = SubResource( 1 )

[node name="shape" parent="area" index="0"]

shape = SubResource( 4 )

[node name="shape" parent="attach_area" index="0"]

shape = SubResource( 3 )

[node name="button" parent="." index="3"]

margin_left = -104.0
margin_top = -104.0
margin_right = 104.0
margin_bottom = 104.0
expand = true

[node name="visibility_notifier" type="VisibilityNotifier2D" parent="." index="5"]

position = Vector2( -9.53674e-06, -3.8147e-06 )
scale = Vector2( 9.6, 9.6 )
rect = Rect2( -10, -10, 20, 20 )

[node name="bugs" parent="." index="6" instance=ExtResource( 3 )]

position = Vector2( 0, 8 )

[connection signal="screen_entered" from="visibility_notifier" to="." method="_spawn_minions"]

[connection signal="screen_exited" from="visibility_notifier" to="." method="_remove_minions"]


